kubernetes/apps/longhorn/longhorn/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  labels:
    name: longhorn
spec:
  hostnames:
    - longhorn.aresu.eu
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
